apps/crchiran-portfolio/gw.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: crchiran-portfolio-gateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingress
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - crchiran.hudai.xyz
      tls:
        httpsRedirect: true

    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - crchiran.hudai.xyz
      tls:
        mode: SIMPLE
        credentialName: crchiran-hudai-xyz-tls
